# fountain-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  audit.md  commit-msg.md  fix-test-coverage.md  justfile  mkdocs.yml  old-plan.md  package-refactor.md  plan.md  pyproject.toml  spec.md  todo.md  updated-plan.md
.ai-sessions/: session-20260321-2149-step1-section-metadata.md  session-20260321-2259-step2-ellipsis-protection.md  session-20260322-0315-steps3-11-spec-compliance.md  session-20260322-0352-code-review-spec.md
.ai-sessions/cleanup/: plan.md
.claude/: CLAUDE.md  settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/source/_templates/sidebar/: brand.html
docs/source/api/: document.rst  elements.rst  index.rst  parser.rst  renderer.rst
docs/source/contributing/: development.rst  documentation.rst  index.rst  testing.rst
docs/source/examples/: basic-usage.rst  custom-renderer.rst  index.rst  real-world.rst  script-analysis.rst
docs/source/user-guide/: advanced.rst  elements.rst  index.rst  parsing.rst  rendering.rst
examples/: README.md
fountain-py/: README.md  pyproject.toml
fountain-py/src/fountain/: __init__.py  document.py  elements.py  parser.py  renderer.py
fountain-py/tests/: test_parser.py  test_renderer.py
fountain-py/tests/fixtures/: simple_script.fountain
src/fountain/: __init__.py  document.py  elements.py  parser.py  renderer.py
tests/: __init__.py  conftest.py  test_document.py  test_edge_cases.py  test_parser.py  test_quickstart_examples.py  test_renderer.py
