[project]
name = "fountain-py"
version = "0.1.0"
description = "A Python library for parsing Fountain markup, the screenwriting format"
readme = "README.md"
authors = [
    { name = "Mason Egger", email = "mason@masonegger.com" }
]
requires-python = ">=3.8"
dependencies = []
keywords = ["fountain", "screenplay", "screenwriting", "parser", "theater", "script"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MasonEgger/fountain-py"
Repository = "https://github.com/MasonEgger/fountain-py"
Documentation = "https://fountain-py.readthedocs.io"
Issues = "https://github.com/MasonEgger/fountain-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fountain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
